toPOJO and fromPOJO methods replaced with BeanUtils.copyProperties